# radiotray-lite

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  README.md
cmake/: CPackConfig.cmake.in  FindLibMagic.cmake  PackageDescription.txt
data/: bookmarks.xml  radiotray-lite.desktop  radiotray.desktop
src/: CMakeLists.txt  about.cpp  about.hpp  asx_playlist_decoder.cpp  asx_playlist_decoder.hpp  config.cpp  config.hpp  constants.hpp  event_manager.cpp  event_manager.hpp  keyboard_control.hpp  keyboard_io.hpp  m3u_playlist_decoder.cpp  m3u_playlist_decoder.hpp  notification.cpp  notification.hpp  options.cpp  options.hpp  player.cpp  player.hpp  playlist.cpp  playlist.hpp  playlist_decoder.hpp  playradio.cpp  pls_playlist_decoder.cpp  pls_playlist_decoder.hpp  radiotray-lite-cli.cpp  radiotray-lite.cpp  ram_playlist_decoder.cpp  ram_playlist_decoder.hpp  tray.cpp  tray.hpp  xspf_playlist_decoder.cpp  xspf_playlist_decoder.hpp
